# alertward

./: .gitignore  README.md  SUBMISSION.md  app.py  architecture_diagram.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/alertward/: __init__.py  actions.py  alerts.py  audit.py  backends.py  cli.py  guardrails.py  pipeline.py  report.py  triage.py
tests/: _bootstrap.py  test_audit.py  test_backends.py  test_guardrails.py  test_pipeline.py  test_triage.py  test_unittest_suite.py
