[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alertward"
version = "0.1.0"
description = "A guarded, audited incident-triage agent for agentic ops: the planner proposes, code decides, destructive remediation can never auto-run."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta" }]
keywords = [
    "agent",
    "incident-response",
    "observability",
    "splunk",
    "sre",
    "guardrails",
    "audit-log",
    "agentic-ops",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
gemini = ["google-genai>=0.3"]
anthropic = ["anthropic>=0.40"]
ollama = ["ollama>=0.3"]
dashboard = ["streamlit>=1.30"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
alertward = "alertward.cli:main"

[project.urls]
Homepage = "https://github.com/MukundaKatta/alertward"
Repository = "https://github.com/MukundaKatta/alertward"

[tool.hatch.build.targets.wheel]
packages = ["src/alertward"]
# Ship the PEP 561 marker so downstream type checkers trust the inline hints.
artifacts = ["src/alertward/py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
